# spinning-box

./: .gitignore  CMakeLists.txt  README.md  helpers.cpp  helpers.h  main.cpp  shader_class.cpp  shader_class.h
glad/include/glad/: glad.h
glad/src/: glad.c
shaders/: standard_frag.glsl  standard_vert.glsl
